--- a/view/docs.html
+++ b/view/docs.html
@@ -8,7 +8,7 @@
 			href="https://www.google.com/s2/favicons?domain=https://www.apachefriends.org/index.html">
 	</head>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-	<link rel="stylesheet" href="./styles/style_docs.css">
+	<link rel="stylesheet" href="../styles/style_docs.css">
 	<body>
 		<div class="nav-container">
 			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -20,16 +20,16 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-				<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-				<a class="nav-link active" href="#">Docs</a>
+				<a class="nav-link" href="#">Docs</a>
 				</li>
 				<li class="nav-item">
-				<a class="nav-link" href="code.html">Code</a>
+				<a class="nav-link" href="view/code.html">Code</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="database.html">Database</a>
+					<a class="nav-link" href="view/database.html">Database</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="https://github.com/AswinBarath/sql-injection-and-prevention" target="__blank">
