--- a/view/docs.html
+++ b/view/docs.html
@@ -26,10 +26,10 @@
 				<a class="nav-link" href="#">Docs</a>
 				</li>
 				<li class="nav-item">
-				<a class="nav-link" href="view/code.html">Code</a>
+				<a class="nav-link" href="./view/code.html">Code</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="view/database.html">Database</a>
+					<a class="nav-link" href="./view/database.html">Database</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="https://github.com/AswinBarath/sql-injection-and-prevention" target="__blank">
