--- a/view/database.html
+++ b/view/database.html
@@ -23,10 +23,10 @@
 				<a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-				<a class="nav-link" href="./view/docs.html">Docs</a>
+				<a class="nav-link" href="./docs.html">Docs</a>
 				</li>
 				<li class="nav-item">
-				<a class="nav-link" href="./view/code.html">Code</a>
+				<a class="nav-link" href="./code.html">Code</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Database</a>
