--- a/view/code.html
+++ b/view/code.html
@@ -23,13 +23,13 @@
 				<a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
-				<a class="nav-link" href="./view/docs.html">Docs</a>
+				<a class="nav-link" href="./docs.html">Docs</a>
 				</li>
 				<li class="nav-item">
 				<a class="nav-link" href="#">Code</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="./view/database.html">Database</a>
+					<a class="nav-link" href="./database.html">Database</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="https://github.com/AswinBarath/sql-injection-and-prevention" target="__blank">
